# twu

./: .gitignore  CLAUDE.md  README.md  eval_workflow.py  pyproject.toml
.claude/skills/req-parse/: SKILL.md
.claude/skills/req-review/: SKILL.md
.claude/skills/req-review/references/: examples.md  templates.md
.claude/skills/tc-gen/: SKILL.md
.claude/skills/tc-plan/: SKILL.md
.claude/skills/workflow-eval/: README.md  SKILL.md
docs/: CONCEPTS.md  DESIGN.md  FORMAT_review.md  FORMAT_testcase.md  ROADMAP.md  SPEC_requirement.md  SPEC_review.md  WORKFLOW.md  学习要点清单-01.md  学习要点清单-02.md  学习要点清单-03.md  学习要点清单-04.md  学习要点清单-05.md
docs/eval/: 01.txt
twu/: __init__.py
twu/cli/: __init__.py  case_batch.py  export_excel.py  init_req.py  parse_doc.py  validate_case.py  validate_plan.py
