[project]
name = "twu"
version = "1.0.0"
description = "测试工作流工具 - 基于 Claude Code 的测试用例生成工具链"
requires-python = ">=3.11"
dependencies = [
    # 文档解析
    "docling>=2.0.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    # Excel 导出
    "openpyxl>=3.1.0",
    # 其他工具
    "pyyaml>=6.0",
]

[project.scripts]
twu = "twu.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["twu*"]

[tool.uv]
dev-dependencies = []
